--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"@babel/runtime": "7.14.8",
 		"core-js": "3.15.2",
 		"gh-pages": "5.0.0",
+		"imask": "6.6.1",
 		"lozad": "1.16.0",
 		"normalize.css": "8.0.1",
 		"swiper": "9.0.5"
